# vrpc

./: Cargo.toml  README.md
attestation/src/: lib.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: NodeRegistry.sol  StateRootRegistry.sol
contracts/test/: StateRootRegistry.t.sol
crates/attestation/: Cargo.toml
crates/attestation/src/: lib.rs
crates/exex/: Cargo.toml
crates/rpc/: Cargo.toml
exex/src/: lib.rs
node/: Cargo.toml
node/src/: main.rs
rpc/src/: lib.rs
