[workspace]
members = [
    "crates/attestation",
    "crates/exex",
    "crates/rpc",
    "crates/node",
]
resolver = "2"

[workspace.dependencies]
# ── Reth ─────────────────────────────────────────────────────────────────────
# Pin to a specific release tag. Check https://github.com/paradigmxyz/reth/releases
reth                 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-exex            = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0", features = ["serde"] }
reth-node-ethereum   = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-node-api        = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-node-builder    = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-provider        = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-primitives      = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-trie            = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-trie-common     = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-tracing         = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }

# ── Alloy (must match reth's transitive deps) ─────────────────────────────────
alloy-primitives     = "1.3"
alloy-sol-types      = "1.3"
alloy-rpc-types      = "1.0"
alloy-signer         = "1.0"
alloy-signer-local   = "1.0"
alloy-provider       = { version = "1.0", features = ["reqwest"] }
alloy-network        = "1.0"
alloy-transport-http = "1.0"
alloy-eips           = "1.0"
alloy-consensus      = "1.0"

# ── Async ─────────────────────────────────────────────────────────────────────
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# ── Utilities ─────────────────────────────────────────────────────────────────
eyre        = "0.6"
tracing     = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
clap        = { version = "4", features = ["derive"] }
jsonrpsee   = { version = "0.26", features = ["server", "macros"] }
dashmap     = "6"
url         = "2"
hex         = "0.4"
