[package]
name    = "vrpc-attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives   = { workspace = true }
alloy-sol-types    = { workspace = true }
alloy-signer       = { workspace = true }
alloy-signer-local = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
eyre               = { workspace = true }
